# c-libs

./: .gitignore  CMakeLists.txt  MEREAD.md  README.md  SHI  SHI.c
2d_process/: .gitignore  2d_proc.h  CMakeLists.txt  graphical_debug.cpp  graphical_debug.h  main.c  main.cpp
2d_process/include/: convex_hull.h  graphical_debug.h  pts_min_dist.h  tools.h
2d_process/src/: convex_hull.c  graphical_debug.cpp  pts_min_dist.c  tools.c
2d_process/tests/: tests.c
OpenGL/: CMakeLists.txt  main.c
OpenGL/glad/: CMakeLists.txt
OpenGL/glad/include/glad/: glad.h
OpenGL/glad/src/: glad.c
OpenGL/glfw/include/GLFW/: glfw3.h
OpenGL/glfw/src/: CMakeLists.txt  cocoa_platform.h  cocoa_window.m  init.c  input.c  internal.h  win32_platform.h  win32_window.c  wl_init.c  wl_platform.h  wl_window.c  x11_init.c  x11_platform.h  x11_window.c
arithmetic/: .gitignore  CMakeLists.txt  complex.h  high_prec_calc.c  long_long_int.c  polynomial.c  test.c
arithmetic/include/: arith_utils.h  arithmetic.h  auto_diff.h  complex.h  integer.h  long_long_long.h  math_func.h
arithmetic/src/: arith_utils.c  auto_diff.c  float2frac.c  high_prec_calc.c  integer.c  long_long_int.c  long_long_long.c  math_func.c  polynomial.c
geometry/: CMakeLists.txt  main.c
geometry/include/: console.h  convex_hull.h  file_manage.h  geom_errors.h  geom_utils.h  geometry.h  graphical.h  graphical_debug.h  object.h  point_set.h  pts_min_dist.h  tools.h
geometry/src/: console.c  file_manage.c  geom_errors.c  geom_errors.h  geom_utils.c  graphical.cpp  graphical_debug.cpp  object.c  point_set.c  pts_min_dist.c  tools.c
geometry/tests/: tests.c  tests.h
ggb/: CMakeLists.txt
ggb/include/: board.h  console.h  file_manage.h  geom_utils.h  geometry.h  graphical.h  object.h
ggb/src/: board.c  console.c  file_manage.c  geom_errors.c  object.c
graph/: CMakeLists.txt
graph/example/: AonGraph.c  AonGraph.h  CMakeLists.txt
graph/include/: Euler_path.h  find_articulation.h  graph.h  min_spanning_tree.h  topsort.h  unweighed_path.h  weight_path.h
graph/include/adjacency_list/: Euler_path.h  aonGraph.h  edge_list.h  find_articulation.h  find_scc.h  graph.h  min_spanning_tree.h  topsort.h  unweighed_path.h  weight_path.h
graph/include/matrix/: NetworkFlow.h  all_pairs_weighted_path.h  graph.h
graph/include/only_edge/: graph.h  min_spanning_tree.h
graph/include/share/: vertex_edge.h
graph/include/utils/: global_variables_for_dfs.h  heap.h  init_indegree.h  queue.h  vertex_edge.h  vertex_list.h
graph/src/: CMakeLists.txt  Euler_path.c  find_articulation.c  graph.c  min_spanning_tree.c  topsort.c  unweighed_path.c  weight_path.c
graph/src/adjacency_list/: Euler_path.c  aonGraph.c  edge_list.c  find_articulation.c  find_scc.c  graph.c  min_spanning_tree.c  topsort.c  unweighed_path.c  weight_path.c
graph/src/matrix/: NetworkFlow.c  all_pairs_weighted_path.c  graph.c
graph/src/only_edge/: graph.c  min_spanning_tree.c
graph/src/utils/: disjiont_set.c  global_variables_for_dfs.c  heap.c  init_degree.c  vertex_list.c
graph/tests/: test.c
graph_only_edge/include/: graph.h
graph_only_edge/include/utils/: disjiont_set.h  heap.h  queue.h
graph_only_edge/src/: graph.c  min_spanning_tree.c
graph_only_edge/tests/: test.c
graph_with_indegree/: CMakeLists.txt
graph_with_indegree/include/with_indegree/: graph.h  init_degree.h  topsort.h  unweighed_path.h
graph_with_indegree/src/utils/: heap.c
graph_with_indegree/src/with_indegree/: graph.c  init_indegree.c  topsort.c  unweighed_path.c
homework/: max.c  number.c  run.c
misc/fun/: RobotManage.c  SHI.c
misc/useful/: compress.c
pcg-c-basic-0.9/: LICENSE.txt
simple_algorithm/: AonGraph.c  AonGraph.h  CMakeLists.txt  NetworkFlow.c  NetworkFlow.h  ant_colony.c  random_primality_test.c  turnpike_reconstruction.c
simple_algorithm/include/: kalman.h  random_primality_test.h  turnpike_reconstruction.h
simple_algorithm/src/: ant_colony.c  kalman.c
simple_algorithm/test/: test.c
simple_algorithm/tests/: test_macro.c
simple_algorithm/utils/: binary_search_tree.h  binary_tree.h  random.c  random.h  stack.h
some_useful/: CMakeLists.txt  KMP.c  compress.bk  float2cfrac.c  large_number_Multiplication.c  long_long_int.c
somefun/: CMakeLists.txt  ant_colony.c  calculate24.c
test/: CMakeLists.txt  main.c
tools/: ANSI.h  AonGraph.c  AonGraph.h  CMakeLists.txt  DisjSet.c  DisjSet.h  Graph.c  Graph.h  Heap.c  Heap.h  HeapForGraph.c  HeapForGraph.h  LinkedList.c  LinkedList.h  MinSpanningTree.c  MinSpanningTree.h  NetworkFlow.c  Queue.c  Queue.h  QueueForGraph.c  QueueForGraph.h  Random.c  Random.h  Sort.c  Sort.h  disjSet.h  heap.h  list.h  queue.h  random.h  sort.c  sort.h  stack.c  stack.h  test.c  timer.h
tree/: CMakeLists.txt
tree/include/: OBST.h  binary_search_tree.h  binary_tree.h  tree.h  tree_struct.h  trie_tree.h
tree/include/cursor/: OBST.h  binary_search_tree.h  binary_tree.h  macro.h  trie_tree.h
tree/include/super_tree/: binary_search_tree.h  binary_tree.h  trie_tree.h
tree/include/tree/: OBST.h  binary_search_tree.h  binary_tree.h  trie_tree.h
tree/include/utils/: heap.h  queue.h
tree/src/: CMakeLists.txt  Huffman.c  OBST.c  binary_search_tree.c  binary_tree.c  tree.c  trie_tree.c
tree/src/cursor/: OBST.c  binary_search_tree.c  binary_tree.c  trie_tree.c
tree/src/super_tree/: OBST.c  binary_search_tree.c  binary_tree.c  trie_tree.c
tree/src/tree/: binary_tree.c  trie_tree.c
tree/src/utils/: heap.c  queue.c
tree/test/: test.c
utils/: CMakeLists.txt  disjSet.h  heap.h  list.h  node.h  queue.h  random.h  sort.c  sort.h  stack.h  test.c  timer.h
